tests/machine/x/ocaml/load_yaml.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/load_yaml.ml", line 72, characters 16-22:
72 |     try __loop1 adults with Break -> ()
                     ^^^^^^
Error: This expression has type record1 list
       but an expression was expected of type (string * Obj.t) list list
       Type record1 is not compatible with type (string * Obj.t) list 


Context (around line 72):
  70 |         ; __loop1 rest
  71 |     in
  72 |     try __loop1 adults with Break -> ()
  73 | 
